got rid of setnumfakers bug: before layer covering it

--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -85,6 +85,7 @@ body {
 
 .secondarysection {
     position: relative;
+    z-index: 1;
 
     &::before {
         content: "";
@@ -93,5 +94,6 @@ body {
         width: 100%;
         height: 100%;
         opacity: 0.2;
+        z-index: -5;
     }
 }
